deploy/dev-db-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spedisjon-db-policy-dev
  namespace: tbd
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 34.88.43.173/32
  podSelector:
    matchLabels:
      db_policy_user: spedisjonbruker
  policyTypes:
    - Egress
