deploy/spedisjon-migrering-prod-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spedisjon-migrering-db-policies
  namespace: tbd
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 100.71.0.167/32 # spedisjon-async
    - to:
        - ipBlock:
            cidr: 35.228.255.9/32 # spedisjon
    - to:
        - ipBlock:
            cidr: 34.88.185.194/32 # spleis
  podSelector:
    matchLabels:
      app: spedisjon-migrate
  policyTypes:
    - Egress
